@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/cegui
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/cegui/ChangeLog,v 1.48 2012/06/10 23:01:12 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/cegui/ChangeLog,v 1.49 2012/06/18 18:10:06 hasufell Exp $
+
+  18 Jun 2012; Julian Ospald <hasufell@gentoo.org> cegui-0.7.6-r1.ebuild:
+  stable for x86 wrt bug #412675
 
   10 Jun 2012; Julian Ospald <hasufell@gentoo.org> cegui-0.7.6-r1.ebuild:
   fix compilation of USE="static-libs zip" wrt bug #420293
